--- a/src/patternfly/base/tokens/_index.scss
+++ b/src/patternfly/base/tokens/_index.scss
@@ -1,6 +1,14 @@
-@forward './workspace-overrides';
-@forward './tokens-font';
-@forward './tokens-palette';
-@forward './tokens-default';
-@forward './tokens-dark';
-@forward './tokens-charts';
+@layer base {
+  @forward './workspace-overrides';
+}
+
+@layer tokens {
+  @forward './tokens-font';
+  @forward './tokens-palette';
+  @forward './tokens-default';
+  @forward './tokens-charts';
+}
+
+@layer token-dark {
+  @forward './tokens-dark';
+}
