--- a/src/patternfly/layouts/Bullseye/bullseye.scss
+++ b/src/patternfly/layouts/Bullseye/bullseye.scss
@@ -1,5 +1,6 @@
 @use '../../sass-utilities' as *;
 
+@layer layouts {
 :where(:root),
 :where(.#{$bullseye}) {
   --#{$bullseye}--Padding: 0;
@@ -12,4 +13,5 @@
   height: 100%;
   padding: var(--#{$bullseye}--Padding);
   margin: 0;
+}
 }
