--- a/src/patternfly/sass-utilities/init.scss
+++ b/src/patternfly/sass-utilities/init.scss
@@ -1,3 +1,5 @@
+@layer base, tokens, tokens-dark, patternfly-reset, components, components.modifiers, utilities;
+
 // stylelint-disable scss/dollar-variable-pattern
 $version-root: 6 !default;
 
