chore(menu-toggle): updated ids

--- a/src/patternfly/components/DataList/data-list-action.hbs
+++ b/src/patternfly/components/DataList/data-list-action.hbs
@@ -9,6 +9,6 @@
         menu-toggle--IsPlain=true
         menu-toggle--HasKebab=true
         menu-toggle--id=(dasherize data-list--id data-list-item--id 'menu-toggle')
-        menu-toggle--aria-label='Dual list item menu toggle'}}
+        menu-toggle--aria-label='Data list item menu toggle'}}
   {{/if}}
 </div>
