--- a/src/patternfly/components/Menu/examples/Menu.css
+++ b/src/patternfly/components/Menu/examples/Menu.css
@@ -20,3 +20,8 @@
 .pf-v6-c-menu__breadcrumb .pf-v6-c-menu {
   z-index: 1;
 }
+
+[class*="ws-core-c-menu"] {
+  padding-block-start: var(--pf-t--global--spacer--md);
+  padding-block-end: var(--pf-t--global--spacer--md);
+}
