--- a/src/patternfly/components/OverflowMenu/overflow-menu.hbs
+++ b/src/patternfly/components/OverflowMenu/overflow-menu.hbs
@@ -1,28 +1,34 @@
+  {{!-- {{ternary overflow-menu--id '\id="\{{overflow-menu--id}}\"' ''}}
+  {{ternary overflow-menu--attribute overflow-menu--attribute ''}}> --}}
 <div class="{{pfv}}overflow-menu{{#if overflow-menu--modifier}} {{overflow-menu--modifier}}{{/if}}"
-  {{ternary overflow-menu--id 'id="{{overflow-menu--id}}"' ''}}
-  {{ternary overflow-menu--attribute 'id="{{overflow-menu--id}}"' ''}}>
+  {{#if overflow-menu--id}}
+    id="{{overflow-menu--id}}"
+  {{/if}}
+  {{#if overflow-menu--attribute}}
+    {{{overflow-menu--attribute}}}
+  {{/if}}>
 
   {{#if menu--IsCondensed}}
-  {{#> overflow-menu-control menu-toggle--IsExpanded=true menu-toggle--aria-label='Generic options'}}
-    {{> overflow-menu-toggle}}
-    {{#if menu--IsExpanded}}
-      {{#> menu}}
-        {{#> menu-content}}
-          {{#> menu-list}}
-            {{#if @partial-block}}
-              {{> @partial-block}}
-            {{else}}
-              {{> menu-list-item menu-list-item--text='Item 1'}}
-              {{> menu-list-item menu-list-item--text='Item 2'}}
-              {{> menu-list-item menu-list-item--text='Item 3'}}
-              {{> menu-list-item menu-list-item--text='Item 4'}}
-              {{> menu-list-item menu-list-item--text='Item 5'}}
-            {{/if}}
-          {{/menu-list}}
-        {{/menu-content}}
-      {{/menu}}
-    {{/if}}
-  {{/overflow-menu-control}}
+    {{#> overflow-menu-control menu-toggle--IsExpanded=true menu-toggle--aria-label='Generic options'}}
+      {{> overflow-menu-toggle}}
+      {{#if menu--IsExpanded}}
+        {{#> menu}}
+          {{#> menu-content}}
+            {{#> menu-list}}
+              {{#if @partial-block}}
+                {{> @partial-block}}
+              {{else}}
+                {{> menu-list-item menu-list-item--text='Item 1'}}
+                {{> menu-list-item menu-list-item--text='Item 2'}}
+                {{> menu-list-item menu-list-item--text='Item 3'}}
+                {{> menu-list-item menu-list-item--text='Item 4'}}
+                {{> menu-list-item menu-list-item--text='Item 5'}}
+              {{/if}}
+            {{/menu-list}}
+          {{/menu-content}}
+        {{/menu}}
+      {{/if}}
+    {{/overflow-menu-control}}
   {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
