--- a/src/patternfly/components/Table/templates/table--action.hbs
+++ b/src/patternfly/components/Table/templates/table--action.hbs
@@ -1,6 +1,6 @@
 {{!-- TODO: remove this once stable --}}
 
 {{#> table-td table-td--IsAction=true}}
-  {{!-- Use content of {empty string} to avoid passing @partial-block to dropdown --}}
+  {{!-- Use content of {empty string} to avoid passing @partial-block to menu --}}
   {{> table-cell-action}}
 {{/table-td}}
