--- a/src/patternfly/components/Table/templates/table--overflow-menu.hbs
+++ b/src/patternfly/components/Table/templates/table--overflow-menu.hbs
@@ -1,4 +1,4 @@
-{{#> overflow-menu overflow-menu--id=(concat table--id '-overflow-menu-' table-tr--index) dropdown-menu--modifier="pf-m-align-right"}}
+{{#> overflow-menu overflow-menu--id=(concat table--id '-overflow-menu-' table-tr--index)}}
   {{#if table--overflow-menu--IsExpanded}}
     {{#> overflow-menu-content}}
       {{#> overflow-menu-group overflow-menu-group--modifier="pf-m-button-group"}}
@@ -15,13 +15,11 @@
       {{/overflow-menu-group}}
     {{/overflow-menu-content}}
   {{else}}
-    {{#> overflow-menu-control dropdown--IsExpanded=table--overflow-menu--dropdown--IsExpanded overflow-menu-button--aria-label="Generic options"}}
-      {{#> overflow-menu-dropdown-item}}
-        Start
-      {{/overflow-menu-dropdown-item}}
-      {{#> overflow-menu-dropdown-item}}
-        Stop
-      {{/overflow-menu-dropdown-item}}
+    {{#> overflow-menu-control overflow-menu-button--aria-label="Generic options"}}
+      {{#> overflow-menu-menu}}
+        {{> menu-list-item menu-list-item--text='Start'}}
+        {{> menu-list-item menu-list-item--text='Stop'}}
+      {{/overflow-menu-menu}}
     {{/overflow-menu-control}}
   {{/if}}
 {{/overflow-menu}}
