--- a/src/patternfly/demos/Card/card-template-gallery.hbs
+++ b/src/patternfly/demos/Card/card-template-gallery.hbs
@@ -16,7 +16,7 @@
     {{#> card-header}}
       <img src="/assets/images/pf-logo-small.svg" alt="PatternFly logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -35,7 +35,7 @@
     {{#> card-header}}
       <img src="/assets/images/activemq-core_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -54,7 +54,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-spark_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -73,7 +73,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-avro_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -92,7 +92,7 @@
     {{#> card-header}}
       <img src="/assets/images/FuseConnector_Icons_AzureServices.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -111,7 +111,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-saxon_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" disabled aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -130,7 +130,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-dropbox_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -149,7 +149,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-infinispan_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -168,7 +168,7 @@
     {{#> card-header}}
       <img src="/assets/images/FuseConnector_Icons_REST.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
@@ -188,7 +188,7 @@
     {{#> card-header}}
       <img src="/assets/images/camel-swagger-java_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize card--id "kebab")}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
         {{/check}}
