--- a/src/patternfly/demos/Page/page-template-drawer-panel.hbs
+++ b/src/patternfly/demos/Page/page-template-drawer-panel.hbs
@@ -2,7 +2,7 @@
   {{#> drawer-body}}
     {{#> drawer-head}}
       {{#> drawer-actions}}
-        {{> dropdown dropdown-toggle--IsPlain="true"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--icon='close'}}
         {{> drawer-close}}
       {{/drawer-actions}}
       {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
