--- a/src/patternfly/components/Table/examples/Table.css
+++ b/src/patternfly/components/Table/examples/Table.css
@@ -14,3 +14,10 @@
 #ws-core-c-table-sticky-header .ws-preview-html {
   height: 400px;
 }
+
+.pf-v6-c-overflow-menu .pf-v6-c-menu {
+  position: absolute;
+  inset-inline-end: 0;
+  z-index: 999;
+  min-width: max-content;
+}
