--- a/src/patternfly/components/Toolbar/templates/toolbar--overflow-menu.hbs
+++ b/src/patternfly/components/Toolbar/templates/toolbar--overflow-menu.hbs
@@ -37,10 +37,12 @@
         {{/overflow-menu-item}}
       {{/overflow-menu-group}}
     {{/overflow-menu-content}}
-    {{#> overflow-menu-control dropdown--IsExpanded="true" overflow-menu-button--aria-label="Dropdown with additional options"}}
-      {{#> overflow-menu-dropdown-item}}
-        Action 7
-      {{/overflow-menu-dropdown-item}}
+
+    {{#> overflow-menu-control menu--IsExpanded=true overflow-menu-button--aria-label="Menu with additional options"}}
+      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--icon='toolbox'}}
+      {{#> overflow-menu-menu}}
+        {{> menu-list-item menu-list-item--text='Action 7'}}
+      {{/overflow-menu-menu}}
     {{/overflow-menu-control}}
   {{/overflow-menu}}
 {{/toolbar-item}}
