--- a/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
+++ b/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
@@ -1,15 +1,7 @@
-{{#> overflow-menu dropdown-menu--modifier="pf-m-align-right" overflow-menu--id=tabs--table-overflow-menu--id}}
-  {{#if dropdown--IsExpanded}}
-    {{#> overflow-menu-control overflow-menu-button--aria-label="Dropdown for tabs table" overflow-menu-button--aria-expanded="true"}}
-      {{#> overflow-menu-dropdown-item}}
-        Action Link
-      {{/overflow-menu-dropdown-item}}
-    {{/overflow-menu-control}}
-  {{else}}
-    {{#> overflow-menu-control overflow-menu-button--aria-label="Dropdown for tabs table" overflow-menu-button--aria-expanded="false"}}
-      {{#> overflow-menu-dropdown-item}}
-        Action Link
-      {{/overflow-menu-dropdown-item}}
-    {{/overflow-menu-control}}
-  {{/if}}
+{{#> overflow-menu overflow-menu--id=tabs--table-overflow-menu--id}}
+  {{#> overflow-menu-control overflow-menu-button--aria-label="Menu for tabs table" overflow-menu-button--aria-expanded=menu--IsExpanded}}
+    {{#> overflow-menu-menu}}
+      {{> menu-list-item menu-list-item--text='Action link'}}
+    {{/overflow-menu-menu}}
+  {{/overflow-menu-control}}
 {{/overflow-menu}}
