--- a/src/patternfly/demos/Toolbar/toolbar-template.hbs
+++ b/src/patternfly/demos/Toolbar/toolbar-template.hbs
@@ -5,7 +5,7 @@ Options: [
   toolbar-template--HasBulkSelect
   toolbar-template--HasSearchFilter
   toolbar-template--HasFilterGroup
-  toolbar-template--HasDropdown0
+  toolbar-template--HasMenu
   toolbar-template--HasSortButton
   toolbar-template--HasOverflowMenu
   toolbar-template--HasOverflowMenuSecondButton
@@ -118,10 +118,10 @@ Options: [
 
             {{/overflow-menu-group}}
           {{/overflow-menu-content}}
-          {{#> overflow-menu-control overflow-menu-button--aria-label="Dropdown with additional options" overflow-menu-button--aria-expanded="false"}}
-            {{#> overflow-menu-dropdown-item}}
-              Action 7
-            {{/overflow-menu-dropdown-item}}
+          {{#> overflow-menu-control overflow-menu-button--aria-label="Menu with additional options" overflow-menu-button--aria-expanded=false}}
+            {{#> overflow-menu-menu}}
+              {{> menu-list-item menu-list-item--text='Action 7'}}
+            {{/overflow-menu-menu}}
           {{/overflow-menu-control}}
         {{/overflow-menu}}
       {{/if}}
