chore(menu-toggle): resolving a11y issues

--- a/src/patternfly/components/LogViewer/templates/__log-viewer-dropdown-menu.hbs
+++ b/src/patternfly/components/LogViewer/templates/__log-viewer-dropdown-menu.hbs
@@ -1,5 +1,5 @@
 {{> menu-toggle menu-toggle--text='System log' menu-toggle--id=(dasherize log-viewer--id 'menu-toggle')}}
-{{#> menu menu--modifier="pf-m-drilldown pf-m-align-right" menu--attribute='style="--pf-v6-c-menu--Width: 200px;"'}}
+{{#> menu menu--modifier="pf-m-drilldown" menu--attribute='style="--pf-v6-c-menu--Width: 200px;"'}}
   {{#> menu-content menu-content--attribute=menu--Drilldown--menu__content--attribute menu--attribute=''}}
     {{#> menu-list menu-content--attribute=''}}
       {{> menu-list-item menu-list-item--text="Clear log"}}
