--- a/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar-select.hbs
+++ b/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar-select.hbs
@@ -1,1 +1,5 @@
-{{> menu-toggle menu-toggle--text='System log' menu-toggle--id=(dasherize log-viewer--id 'menu-toggle') menu-toggle--aria-label='Log viewer menu toggle'}}
+{{> menu-toggle
+    menu-toggle--text='System log'
+    menu-toggle--id=(dasherize log-viewer--id 'log-menu-toggle')
+    menu-toggle--aria-label='Log viewer menu toggle'
+  }}
