--- a/src/patternfly/components/Menu/menu.scss
+++ b/src/patternfly/components/Menu/menu.scss
@@ -4,8 +4,7 @@
   // * Menu
   --#{$menu}--RowGap: var(--pf-t--global--spacer--sm);
   --#{$menu}--Width: auto;
-  --#{$menu}--MinWidth: max-content;
-  --#{$menu}--MaxWidth: 400ch;
+  --#{$menu}--MinWidth: auto;
   --#{$menu}--PaddingBlockStart: var(--pf-t--global--spacer--sm);
   --#{$menu}--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
   --#{$menu}--BackgroundColor: var(--pf-t--global--background--color--floating--default);
@@ -194,7 +193,6 @@
   row-gap: var(--#{$menu}--RowGap);
   width: var(--#{$menu}--Width);
   min-width: var(--#{$menu}--MinWidth);
-  max-width: var(--#{$menu}--MaxWidth);
   padding-block-start: var(--#{$menu}--PaddingBlockStart);
   padding-block-end: var(--#{$menu}--PaddingBlockEnd);
   overflow: hidden;
