--- a/src/patternfly/components/NotificationDrawer/notification-drawer-basic-list.hbs
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer-basic-list.hbs
@@ -12,7 +12,7 @@
       {{/notification-drawer-list-item-header-title}}
     {{/notification-drawer-list-item-header}}
     {{#> notification-drawer-list-item-action}}
-      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--id=(dasherize log-viewer--id 'menu-toggle-1')}}
+      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize log-viewer--id 'menu-toggle-1')}}
     {{/notification-drawer-list-item-action}}
     {{#> notification-drawer-list-item-description}}
       This is an info notification description.
