--- a/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
+++ b/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
@@ -34,17 +34,17 @@
                   {{#> menu-list check--id=(dasherize log-viewer--id 'check' menu-list-item--id)}}
                     {{#> menu-list-item menu-list-item--id="1"}}
                       {{#> menu-item}}
-                        {{> check check-label--text='Wrap lines'}}
+                        {{> check check--id=(dasherize log-viewer--id 'desktop-check-wrap-lines') check-label--text='Wrap lines'}}
                       {{/menu-item}}
                     {{/menu-list-item}}
                     {{#> menu-list-item menu-list-item--id="2"}}
                       {{#> menu-item}}
-                        {{> check check-label--text='Show timestamps'}}
+                        {{> check check--id=(dasherize log-viewer--id 'desktop-check-show-timestamps') check-label--text='Show timestamps'}}
                       {{/menu-item}}
                     {{/menu-list-item}}
                     {{#> menu-list-item menu-list-item--id="3"}}
                       {{#> menu-item}}
-                        {{> check check-label--text='Display line number'}}
+                        {{> check check--id=(dasherize log-viewer--id 'desktop-check-line-number') check-label--text='Display line numbers'}}
                       {{/menu-item}}
                     {{/menu-list-item}}
                   {{/menu-list}}
